# lematerial-llm-synthesis

./: .env.example  .env.mistral  .env.old-version.txt  .gitignore  .pre-commit-config.yaml  README.md  README_DATA.md  developer_guide.md  placeholder.txt  pyproject.toml  test.py  try.ipynb
annotations/0196f8de81efd9e26a0395322aeace694049ab33/: result.json
annotations/0807.2710/: result.json
annotations/0b2dbb1d53c10d32b581b0da073af35e62dfbf28/: result.json
annotations/0d5ffdaf23a655e1eff80bc8b6b4978067de4d5b/: result.json
annotations/1002.0417/: result.json
annotations/1006.4961/: result.json
annotations/1204.1443/: result.json
annotations/1404.2154/: result.json
annotations/1409.1070/: result.json  result_human.json
annotations/1602.02498/: result.json  result_human.json
annotations/1605.04038/: result.json
annotations/1610.04348/: result.json
annotations/1704.04226/: result.json
annotations/1705.03436/: result.json
annotations/1706.00484/: result.json
annotations/1709.00477/: result.json
annotations/1710.07877/: result.json
annotations/1902.03049/: result.json  result_human.json
annotations/1908.05574/: result.json
annotations/1910.07716/: result.json
annotations/1d6ca39fff40accf64733808c749d26c30a0e4f9/: result.json
annotations/1df04f9e3f942b30d5e1c2bd1ab9cc3a79c23f13/: result.json  result_human.json
annotations/2008.05768/: result.json
annotations/2107.03033/: result.json
annotations/2210.10705/: result.json
annotations/2212.12506/: result.json  result_human.json
annotations/22ced3cadff4dfa0be3210f09a43e8c32b0ffa80/: result.json
annotations/22fb9453271c06cc332106a3e0fda74364267b86/: result.json
annotations/2304.02217/: result.json
annotations/2306.14755/: result.json  result_human.json
annotations/2307.06888/: result.json
annotations/2309.13465/: result.json
config/: config.yaml
data/: get_data_stats.py
examples/config/: config.yaml
notebooks/: extract_figures_mod.ipynb  figure_enhanced_markdown_demo.ipynb  markdown_extraction_demo.ipynb  pdf_extraction.ipynb  synthesis_procedure_extraction.ipynb
scripts/: extract_synthesis_procedure_from_text.py  extract_text_from_pdfs.py
tests/: .gitignore  test_generate_synthetic_plots_pipeline.py
(+5276 files in other folders)
