[project]
name = "llm-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "samgleason", email = "samuel.gleason@entalpic.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.31.2",
    "dspy>=2.6.24",
    "fsspec>=2025.3.0",
    "gcsfs>=2025.3.0",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.4.2",
    "mistralai>=1.7.0",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.0.0",
    "torchmetrics>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "ruff>=0.11.12",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
]


# Ruff global configuration for linting & formatting
# --------------------------------------------------------
[tool.ruff]
# Target Python version
target-version = "py311"

# Line length (black formatter convention)
line-length = 79

[tool.ruff.lint]
# Ruff-specific rules (`RUF`), isort (`I`), pycodestyle (`E`), and more common rulesets
select = ["E", "F", "I", "N", "UP", "RUF"]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Quote style
quote-style = "double"
# Indent style
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"*.ipynb" = ["E501"]
